It's just going to keep being Alliance events

--- a/localization/english/fodlan_leicester_l_english.yml
+++ b/localization/english/fodlan_leicester_l_english.yml
@@ -62,7 +62,14 @@
  FOD_alliance.7.t:0 "Accusations at the table"
  FOD_alliance.7.desc:0 "During the current session of the Alliance Roundtable, [first_lord.GetName] openly discredited my choice for the next ruler of the alliance. Saying [root_choice.GetFirstName] is undeserving of such a position, and his choice [first_lord_choice.GetFirstName] would be a much better choice to lead the alliance."
  FOD_alliance.7.a:0 "I won't stand for this, discredit them instead."
+ FOD_alliance.7.a.success:0 "I succeed."
+ FOD_alliance.7.a.failure:0 "I fail."
  FOD_alliance.7.b:0 "Try to smooth over the situation."
+ FOD_alliance.7.b.success:0 "I succeed."
+ FOD_alliance.7.b.failure:0 "I fail."
+ FOD_alliance.8.t:0 "Candidates Brawling"
+ FOD_alliance.8.desc:0 "I have learned that my choice for the next Alliance Leader, [root_choice.GetName], got into a brawl in public. The other party in this was [other_choice.GetName], another candidate for the election. It seems their scuffle ended in a draw and neither was seriously wounded. They both suffered reputation because of their unprofessional behaviour."
+ FOD_alliance.8.a:0 "Shame on them both."
  alliance_gov_switch_decision:0 "Formally Join Alliance"
  alliance_gov_switch_decision_tooltip:0 "Change [government|E] type to Alliance Feudalism."
  alliance_gov_switch_desc:0 "I swear fealty to a member of the Leicester Alliance, but until now have not enjoyed all the privileges of Alliance membership. That changes today."
