Alliance events and also added a bit to the other flavor events

--- a/localization/english/fodlan_leicester_l_english.yml
+++ b/localization/english/fodlan_leicester_l_english.yml
@@ -68,8 +68,17 @@
  FOD_alliance.7.b.success:0 "I succeed."
  FOD_alliance.7.b.failure:0 "I fail."
  FOD_alliance.8.t:0 "Candidates Brawling"
- FOD_alliance.8.desc:0 "I have learned that my choice for the next Alliance Leader, [root_choice.GetName], got into a brawl in public. The other party in this was [other_choice.GetName], another candidate for the election. It seems their scuffle ended in a draw and neither was seriously wounded. They both suffered reputation because of their unprofessional behaviour."
+ FOD_alliance.8.desc:0 "I have learned that my choice for the next Alliance Leader, [root_choice.GetName], got into a brawl in public. The other party in this was [other_choice.GetName], another candidate for the election. It seems their scuffle ended in a draw and neither was seriously wounded. Their reputations both suffered because of their unprofessional behaviour."
  FOD_alliance.8.a:0 "Shame on them both."
+ FOD_alliance.9.t:0 "Candidate Visit"
+ FOD_alliance.9.desc:0 "[candidate.GetName] is in [capital.GetNameNoTierNoTooltip] today to participate in a tournament. It is a simple and safe combat with practice weapons, with matches ending at first contact."
+ FOD_alliance.9.a:0 "A convenient opportunity for a friendly conversation."
+ FOD_alliance.9.b:0 "Let me show [candidate.GetHerHim] how it's done."
+ FOD_alliance.9.b.success:0 "I am victorious."
+ FOD_alliance.9.b.failure:0 "I am bested."
+ FOD_alliance.9.c:0 "I can make [candidate.GetHerHim] look foolish by sabotaging [candidate.GetHerHis] equipment."
+ FOD_alliance.9.c.success:0 "Nobody suspects a thing."
+ FOD_alliance.9.c.failure:0 "I am caught in the act."
  alliance_gov_switch_decision:0 "Formally Join Alliance"
  alliance_gov_switch_decision_tooltip:0 "Change [government|E] type to Alliance Feudalism."
  alliance_gov_switch_desc:0 "I swear fealty to a member of the Leicester Alliance, but until now have not enjoyed all the privileges of Alliance membership. That changes today."
