--- a/localization/english/fodlan_leicester_l_english.yml
+++ b/localization/english/fodlan_leicester_l_english.yml
@@ -61,19 +61,19 @@
  FOD_alliance.6.f:0 "[other_noble.GetName] might help balance the power dynamic."
  selfish_liege_modifier:0 "Selfish Investment"
  chosen_vassal_opinion:0 "Chosen For Investment"
- FOD_alliance.7.t:0 "Accusations at the table"
- FOD_alliance.7.desc:0 "During the current session of the Alliance Roundtable, [first_lord.GetName] openly discredited my choice for the next ruler of the alliance. Saying [root_choice.GetFirstName] is undeserving of such a position, and his choice [first_lord_choice.GetFirstName] would be a much better choice to lead the alliance."
- FOD_alliance.7.a:0 "I won't stand for this, discredit them instead."
+ FOD_alliance.7.t:0 "Disparagement in Council"
+ FOD_alliance.7.desc:0 "During a particularly dull session of the Alliance Roundtable wherein little progress was made, I noticed [first_lord.GetName] casting glances my way as though [first_lord.GetSheHe] had something to say. Evidently [first_lord.GetHerHis] patience wore thin, though, for [first_lord.GetSheHe] stood up and launched into a tirade. [first_lord.GetFirstName] lambasted my choice for the next ruler of the Alliance, declaring [root_choice.GetFirstName] ineffectual and altogether incompetent. \n\nOn the same breath, [first_lord.GetSheHe] presented the talent and genius of [first_lord_choice.GetFirstName] and hailed [first_lord_choice.GetHerHim] as though [first_lord_choice.GetSheHe] was the second coming of Riegan. I let [first_lord.GetName] finish, and now the baton has been passed back to me. Surely I cannot let this stand uncontested?"
+ FOD_alliance.7.a:0 "Eye for an eye, tooth for a tooth; [first_lord.GetHerHis] candidate is worthless."
  FOD_alliance.7.a.success:0 "I succeed."
  FOD_alliance.7.a.failure:0 "I fail."
- FOD_alliance.7.b:0 "Try to smooth over the situation."
+ FOD_alliance.7.b:0 "It would be best to turn the other cheek."
  FOD_alliance.7.b.success:0 "I succeed."
  FOD_alliance.7.b.failure:0 "I fail."
  FOD_alliance.8.t:0 "Candidates Brawling"
- FOD_alliance.8.desc:0 "I have learned that my choice for the next Alliance Leader, [root_choice.GetName], got into a brawl in public. The other party in this was [other_choice.GetName], another candidate for the election. It seems their scuffle ended in a draw and neither was seriously wounded. Their reputations both suffered because of their unprofessional behaviour."
- FOD_alliance.8.a:0 "Shame on them both."
+ FOD_alliance.8.desc:0 "[root_choice.GetName] had been avoiding me the entire day, much to my confusion. I do not recall doing anything to wrong them. The fault was not mine, though; I learned that [root_choice.GetName] had gotten into a brawl. I was confused as to why this was a matter of significant importance until I learned that the other party in this was [other_choice.GetName], another candidate for the election. \n\nNeither won decisively, it seems; their little scuffle ended in a draw. Perhaps if [root_choice.GetName] had won the fight, this would be no issue. Now both of their characters are being brought into question, and public opinion of them has plummeted."
+ FOD_alliance.8.a:0 "A pitiful display."
  FOD_alliance.9.t:0 "Candidate Visit"
- FOD_alliance.9.desc:0 "[candidate.GetName] is in [capital.GetNameNoTierNoTooltip] today to participate in a tournament. It is a simple and safe combat with practice weapons, with matches ending at first contact."
+ FOD_alliance.9.desc:0 "[candidate.GetName] is in [capital.GetNameNoTierNoTooltip] today to participate in a tournament celebrating an important event in Alliance history. The combat is wholly safe. The participants use only training weapons and are thoroughly protected by gear warded with magic. Combat ends on contact. It is a simple event, though I suppose it is as close to real combat as we can go without safety issues. \n\nThe event has been some fun thus far, but even in festivities one cannot forget their place as part of the Alliance. I see many opportunities surrounding [candidate.GetName]."
  FOD_alliance.9.a:0 "A convenient opportunity for a friendly conversation."
  FOD_alliance.9.b:0 "Let me show [candidate.GetHerHim] how it's done."
  FOD_alliance.9.b.success:0 "I am victorious."
