--- a/localization/english/fodlan_religion_l_english.yml
+++ b/localization/english/fodlan_religion_l_english.yml
@@ -64,125 +64,125 @@
  dogasil_adj:0 "Dogasil"
 
  karakaya:0 "Karakaya"
- karakaya_desc:0 "The Brown Sun of Malik is sought after by those who dedicate themselves to the arts, Malik shared all that he discovered and created and yet remained a humble man, not seeking anything for his works"
+ karakaya_desc:0 "The Brown Sun of Malik is sought after by those who dedicate themselves to the arts, Malik shared all that he discovered and created and yet remained a humble man, not seeking anything for his works, those who walk the brown sun's path shall dedicate themselves to the arts and to progress all for the sake of bettering the lives of their people and like Malik, ask for nothing but the happiness and comfort of their kin"
  karakaya_adj:0 "Karakaya"
 
  anthrapos_religion:0 "Agarthan"
- anthrapos_religion_desc:0 ""
+ anthrapos_religion_desc:0 "The dark oaths of the Agarthans also known as Those Who Slither in The Dark, believing themselves superior to those who live on the surface they will do whatever it takes to regain their former glory, any that stand in their way shall be made to serve their cause, willing or not, they shall make their ancient enemy, the Children of the Goddess, pay for the crimes they have committed against them"
  anthrapos_religion_adj:0 "Agarthan"
  
  agarthan:0 "Agarthan"
- agarthan_desc:0 ""
+ agarthan_desc:0 "The dark alchemy and technologies of the Agarthans, using knowledge that is long since forgotten by those from the surface, they will use these cruel and horrendous methods to grant power to their "allies" and to utterly destroy their enemies, though one need not be their enemy to suffer at their hands for just being born on the surface is enough to make them a possible target for dark experimentation"
  agarthan_adj:0 "Agarthan" 
  
  liberationist:0 "Liberationist"
- liberationist_desc:0 ""
+ liberationist_desc:0 "The followers of the King of Liberation himself, Nemesis had gained a great deal of support from his allies in darkness and initiated a mass genocide against the Nabateans, his following included the 10 Elites themselves who had gained the powerful crests and the legendary Heroes's Relics, weapons and powers from the blood and bones of their fallen enemies"
  liberationist_adj:0 "Liberationist"
 
  dewa_sheta_ah_religion:0 "Dewa Sheta Ah"
- dewa_sheta_ah_religion_desc:0 ""
+ dewa_sheta_ah_religion_desc:0 "The people of Morfis pay homage to no god but instead dedicate themselves to the schools of study and magic, the goal of benefitting their people by learning to use the magical arts by way of potential warfare techniques or even construction, nothing not even magic should never have limits and the mages of Morfis know this better than anyone"
  dewa_sheta_ah_religion_adj:0 "Dewa Sheta Ah"
  
  inetsaret:0 "Inetsaret"
- inetsaret_desc:0 ""
+ inetsaret_desc:0 "The school of Inetsaret offers it's scholars the chance the study deeper into the arcane arts both white and black magics are focused upon with many of it's followers becoming doctors or war-mages, a difficult school to study but those who are determined to learn shall not be deterred and will study day and night until their education is complete"
  inetsaret_adj:0 "Inetsaret"
  
  nekfsaret:0 "Nekfsaret"
- nekfsaret_desc:0 ""
+ nekfsaret_desc:0 "The school of Nekfsaret is dedicated not to magic itself but instead a more simple path of that as a regular school teacher, teaching history, mathematics and other basic knowledge for despite Morfis's preference to magic it cannot be built on it alone, reading and writing is the foundation of civilisation and none know this more than them"
  nekfsaret_adj:0 "Nekfsaret"
  
  sekisaret:0 "Sekisaret"
- sekisaret_desc:0 ""
+ sekisaret_desc:0 "The school of Sekisaret is both respected and feared for it teaches one to harness the very shadows themselves, those who study it must be truly sure of their abilities as one can easily lose their very being and instead of mastering the shadows they can become part of it, lost forever soul and all, those who do master it however are known to be some of the most powerful people in Morfis"
  sekisaret_adj:0 "Sekisaret"
 
  lumentalism_religion:0 "Lumentalism"
- lumentalism_religion_desc:0 ""
+ lumentalism_religion_desc:0 "The people of Albinea worship no gods but instead honour the animal spirits of the land, the northern and southern people's of Albinea differ on which spirits they honour and the way they do so and so often clash with one another however when times are harsh they always aid one another when in dire need, not as kin but as fellow Albineans"
  lumentalism_religion_adj:0 "Lumentalism"
  
  lumialue:0 "Lumialue"
- lumialue_desc:0 ""
+ lumialue_desc:0 "The people of southern Albinea commonly honour the spirit of the Reindeer and the Elk, representing the beauty and bounty of the land, the Reindeer representing the beauty of nature and commonly walk amongst the people in their daily lives, the Elk represents the bounty that the land can provide and are commonly seen as beasts of burden and as cavalry during times of war"
  lumialue_adj:0 "Lumialue"
  
  vuristoalite:0 "Vuristoalite"
- vuristoalite_desc:0 ""
+ vuristoalite_desc:0 "The people of northern Albinea rally around the roar of the mighty Bear, battle and the protection of family is everything, struggle in any form whether be it on foraging for food or in times of war nothing will stop them from hardening their bodies and spirits, to keep oneself soft is to be seen as little more than a cub needing it's milk"
  vuristoalite_adj:0 "Vuristoalite"
 
  olgail_bilog_religion:0 "Olgail Bilog"
- olgail_bilog_religion_desc:0 ""
+ olgail_bilog_religion_desc:0 "The people of Brigid believe that the land, sea and sky are home to a multitude of spirits and thus they pray and leave offerings to them when in need of their guidance and support depending on the task they are doing such as hunting or simple farming however when in times of war there too are spirits for whom they can pray to"
  olgail_bilog_religion_adj:0 "Olgail Bilog"
  
  lamhach:0 "Lamhach"
- lamhach_desc:0 ""
+ lamhach_desc:0 "The flame spirit holds dominion over war, hunting and anything that requires combat in any form it is a spirit of violence that touches the fierce passions of a person to give them the courage to march upon the fields of war for either conquest and glory, raiding and plunder or even the strength to protect the ones they love and care for"
  lamhach_adj:0 "Lamhach"
  
  fuale:0 "Fuale"
- fuale_desc:0 ""
+ fuale_desc:0 "The water spirit is a spirit with two faces, one face shows a caring side that provides the bounty of the sea yet it also has a darker and crueler face, for one shouldn't fully put their trust in this spirit for when least expected can bring terror and destruction upon those who least expect it and so many try to placate the spirit by leaving offerings in hope that they will keep the spirit content"
  fuale_adj:0 "Fuale"
  
  talahm_ithir:0 "Talahm Ithir"
- talahm_ithir_desc:0 ""
+ talahm_ithir_desc:0 "The spirit of earth is beseeched when in need of the comforts and reminders of home, as the very land gives shelter to it's people so must it's people care for the land, when one is far from home they can always put their trust in this spirit in order to be guided back home or even to a new home should a dark fate befall their old one"
  talahm_ithir_adj:0 "Talahm Ithir"
  
  gaothe:0 "Gaothe"
- gaothe_desc:0 ""
+ gaothe_desc:0 "The wind spirit blesses it's people with the divine gift of freedom and like an arrow to be set loose from the bow, the people thank the spirit for this great gift by honouring what it stands for, going where the wind takes them whenever and wherever that may be, even when hunting they would beseech it to swiftly carry the arrow to their prey"
  gaothe_adj:0 "Gaothe"
 
  pantheon_religion:0 "Pantheon"
- pantheon_religion_desc:0 ""
+ pantheon_religion_desc:0 "The people of Duscur follow an innumerable amount of gods taking up worship of gods of other lands including those of Fodlan and beyond, none are seen as invalid or unworthy of worship and many villages and cities all over Duscur have a different pantheon of gods even from other continents, but all include the original Duscurian gods"
  pantheon_religion_adj:0 "Pantheon"
  
  pantheon_faith:0 "Pantheon"
- pantheon_faith_desc:0 ""
+ pantheon_faith_desc:0 "Gods, regardless of where they are from have a place in the hearts and minds of Duscur, no two Duscurians follow the same personal pantheon within their hearts, many of the people of Duscur leave Fodlan in order to travel to distant lands to discover new gods to share amongst their people. be they strong, kind, wise or cruel all are accepted in Duscur"
  pantheon_faith_adj:0 "Pantheon"
  
  comunetian_faith:0 "Comunetian"
- comunetian_faith_desc:0 ""
+ comunetian_faith_desc:0 "While many in Duscur follow other gods of other lands there are those who cling to the original pantheon of the land, they would refuse to accept any other god into their hearts believing that taking foreign gods would leave them weak and so they would cling to the original Duscurian pantheon of gods, stating that they are the only ones that they will ever need"
  comunetian_faith_adj:0 "Comunetian"
 
  reqonn_de_opulencia_religion:0 "Reqonn de Opulencia"
- reqonn_de_opulencia_religion_desc:0 ""
+ reqonn_de_opulencia_religion_desc:0 "Money, the very word means power to the people of Reqonn, thus many of them are shrewd business people, mercenaries and bankers however they also view blood just as important as it is the belief of the Reqonnese that familial knowledge is passed down through the blood and thus they wed and fornicate amongst their own kin"
  reqonn_de_opulencia_religion_adj:0 "Reqonn de Opulencia"
  
  reqonn_de_opulencia:0 "Reqonn de Opulencia"
- reqonn_de_opulencia_desc:0 ""
+ reqonn_de_opulencia_desc:0 "Filling ones pockets allows one to purchase many items of power and many, many favours including the chance to earn even more money, keeping kin close to you however is important not because of just treasuring family but to treasure the dynastical knowledge that dwells within the blood"
  reqonn_de_opulencia_adj:0 "Reqonn de Opulencia"
  
  jebbilencia:0 "Jebbilencia"
- jebbilencia_desc:0 ""
+ jebbilencia_desc:0 "Magic, knowledge and money, the three most powerful things in existence to the people who embraced both the cultures of Reqonn and Morfis, mainly keeping to themselves but turning none away, they will however use both of their inherited strengths in order to defend their way of life regardless of whether they are accepted by others or not"
  jebbilencia_adj:0 "Jebbilencia"
 
  saatpra_daanav_religion:0 "Saatpra Daanav"
- saatpra_daanav_religion_desc:0 ""
+ saatpra_daanav_religion_desc:0 "The people of Koteshger love their mighty ancestor god for it is he who formed their homeland and so they named the very land after him, his many arms each represent a quality or two qualities that he stands for and which one he used to create their homeland, each and everyone of his people honour him by dedicating themselves to one or more of his four arms"
  saatpra_daanav_religion_adj:0 "Saatpra Daanav"
  
  lmabhal:0 "Lmabhal"
- lmabhal_desc:0 ""
+ lmabhal_desc:0 "The first of Kotesh's four arms represents wisdom, for when Kotesh used his strength to form the land he used his wisdom to find a way for it to be habitable for his people and now kings and queens of Koteshger rule with the wisdom that their god blessed them with, the commonfolk especially honour this arm for what they lack in strength they make up for with wisdom"
  lmabhal_adj:0 "Lmabhal"
  
  kamajorma:0 "Kamajorma"
- kamajorma_desc:0 ""
+ kamajorma_desc:0 "The third and fourth of Kotesh's arms represent the virility and fertility of man and woman, when they first came to the land they were small in number, knowing this Kotesh blessed them with strong seed and mighty womb to allow them to quickly populate the land, granting them the numbers to unite into a strong and equally virile kingdom"
  kamajorma_adj:0 "Kamajorma"
  
  dinymori:0 "Dinymori"
- dinymori_desc:0 "
+ dinymori_desc:0 "The second of Kotesh's four arms represents the strength he used to form the very land that his people live upon, however it is not just his physical prowess that they recognise but the strength of his heart as his love for his own people gave him the strength of will to forge the land into the beautiful home that now stands before them all"
  dinymori_adj:0 "Dinymori"
 
  tenolotiskardias_religion:0 "Tenolotiskardias"
- tenolotiskardias_religion_desc:0 ""
+ tenolotiskardias_religion_desc:0 "Following the war between Nabatea and Agartha the following result had split a once united people, on one side seething with hatred vanished into the shadows and the other seeking a new home fled to the mountainous regions of Kotesh, there they sought a new peaceful life, far from their now former foes, the Children of the Goddess"
  tenolotiskardias_religion_adj:0 "Tenolotiskardias"
 
  tenolotiskardias_faith:0 "Tenolotiskardias"
- tenolotiskardias_faith_desc:0 ""
+ tenolotiskardias_faith_desc:0 "Embracing the outside world with a new perspective these former Agarthans now seek to redesign their technology not for war, but for peaceful and beneficial ways not just for them, but for the very land around them by making sure that nature is unharmed by this new path and for those who wish to join their new society, all are welcome to do so with open arms"
  tenolotiskardias_faith_adj:0 "Tenolotiskardias"
 
  tjonar_ormurinn_religion:0 "Tjonar Ormurinn"
- tjonar_ormurinn_religion_desc:0 ""
+ tjonar_ormurinn_religion_desc:0 "Blood, death and sacrifice, these are the ways of the warriors of Sreng who see the Desert-Lord as a cruel and bloodthirsty worm, they sacrifice any victims they capture from their raids to quench the thirst of their god, for should he not feast upon their captives then he would simply take what is owed to him by feasting upon them"
  tjonar_ormurinn_religion_adj:0 "Tjonar Ormurinn"
 
  heimsormurinn:0 "Heimsormurinn"
- heimsormurinn_desc:0 "The faith of the people of Sreng, representing their nomadic ways and the pursuit of strength in the name of their god"
+ heimsormurinn_desc:0 "Embracing the bloody circle of destruction the warriors of Sreng look upon the rest of Fodlan with disgust and so they would raid their homelands to bring back slaves and sacrifices to feed to the hungry worm, weakness is not tolerated amongst them for should even the slightest misstep happen then they and not just their captives, shall be given unto the worm to feast"
  heimsormurinn_adj:0 "Heimsormurinn"
  
  mekeal:0 "Mekeal"
- mekeal_desc:0 "The faith of the Desert-Lord himself, his followers seek to fight those who they consider weak and cowardly, the weak exist to fear the strong and none know this better than the Srengites themselves"
+ mekeal_desc:0 "The faith of the Desert Lord himself, these Srengites see themselves as the true followers of their lord known as Mekeal and often clash with their more bloodthirsty kin, though they too do not tolerate weakness from both their own and the people of Fodlan they would only bring slaves and plunder from their raids for their lord does not look kindly upon such dark ways"
  mekeal_adj:0 "Mekeal"
