Python script error fixer

--- a/localization/english/fodlan_namelists_l_english.yml
+++ b/localization/english/fodlan_namelists_l_english.yml
@@ -889,3 +889,208 @@
  Velour:0 "Velour"
  Serge:0 "Serge"
  Anemhor:0 "Anemhor"
+  Kupala: "Kupala"
+ Gwier: "Gwier"
+ Zeke: "Zeke"
+ Soheil: "Soheil"
+ SimonÃ©: "SimonÃ©"
+ Cuach: "Cuach"
+ Monier: "Monier"
+ Lykas: "Lykas"
+ Maarten: "Maarten"
+ Maonach: "Maonach"
+ Estelle: "Estelle"
+ Joe: "Joe"
+ Zakai: "Zakai"
+ Rasoul: "Rasoul"
+ LÃºcia: "LÃºcia"
+ Vanellope: "Vanellope"
+ Reiner: "Reiner"
+ Guillame: "Guillame"
+ Heydar: "Heydar"
+ Esma: "Esma"
+ Liav: "Liav"
+ Near: "Near"
+ Bevan: "Bevan"
+ Khalili: "Khalili"
+ Annie: "Annie"
+ Karniel: "Karniel"
+ Rhosyn: "Rhosyn"
+ Yusef: "Yusef"
+ Oranos: "Oranos"
+ Fiani: "Fiani"
+ Historia: "Historia"
+ Kouli: "Kouli"
+ Omid: "Omid"
+ Navat: "Navat"
+ Arman: "Arman"
+ Moris: "Moris"
+ Pallardo: "Pallardo"
+ Josefina: "Josefina"
+ Lyamina: "Lyamina"
+ Granet: "Granet"
+ Wulfric: "Wulfric"
+ Biran: "Biran"
+ Hrym: "Hrym"
+ Kamina: "Kamina"
+ Karam: "Karam"
+ Elinoy: "Elinoy"
+ Gascon: "Gascon"
+ Caillin: "Caillin"
+ PatrÃ­cia: "PatrÃ­cia"
+ Mevorach: "Mevorach"
+ Grisha: "Grisha"
+ Bertolt: "Bertolt"
+ Macuil: "Macuil"
+ Amanda: "Amanda"
+ Bana: "Bana"
+ Gilboa: "Gilboa"
+ Nahar: "Nahar"
+ Caecina: "Caecina"
+ Bert: "Bert"
+ OctÃ¡vio: "OctÃ¡vio"
+ Keith: "Keith"
+ Meldrick: "Meldrick"
+ Gachet: "Gachet"
+ Dearg: "Dearg"
+ Annelise: "Annelise"
+ Lalo: "Lalo"
+ Roya: "Roya"
+ Muire: "Muire"
+ Cashin: "Cashin"
+ Ainnair: "Ainnair"
+ Esmaeel: "Esmaeel"
+ Lewin: "Lewin"
+ Vineet: "Vineet"
+ Ellen: "Ellen"
+ Venga: "Venga"
+ Lorcan: "Lorcan"
+ Hamlet: "Hamlet"
+ Aearn: "Aearn"
+ Mike: "Mike"
+ SÃ¡lado: "SÃ¡lado"
+ Mikulas: "Mikulas"
+ Hildebrandt: "Hildebrandt"
+ Castelleta: "Castelleta"
+ Mahava: "Mahava"
+ Benlee: "Benlee"
+ LÃ­dia: "LÃ­dia"
+ Draigen: "Draigen"
+ Acarya: "Acarya"
+ Fiac: "Fiac"
+ Heshmat: "Heshmat"
+ Keird: "Keird"
+ Aaliya: "Aaliya"
+ Lydie: "Lydie"
+ Kit: "Kit"
+ AgustÃ­n: "AgustÃ­n"
+ Nahresi: "Nahresi"
+ Nichlas: "Nichlas"
+ Dairen: "Dairen"
+ Yarin: "Yarin"
+ Mohun: "Mohun"
+ Jeremaih: "Jeremaih"
+ Nell: "Nell"
+ Imren: "Imren"
+ Andrey: "Andrey"
+ Eshkol: "Eshkol"
+ Dermot: "Dermot"
+ Ishmael: "Ishmael"
+ Pelle: "Pelle"
+ Shelef: "Shelef"
+ Dahlgren: "Dahlgren"
+ Voronov: "Voronov"
+ Cammy: "Cammy"
+ Eona: "Eona"
+ Therese: "Therese"
+ Ilkan: "Ilkan"
+ Prashant: "Prashant"
+ Gadiel: "Gadiel"
+ Ronli: "Ronli"
+ Gabi: "Gabi"
+ Noirin: "Noirin"
+ Kerron: "Kerron"
+ Mehran: "Mehran"
+ Nasrin: "Nasrin"
+ Ea: "Ea"
+ Reinhart: "Reinhart"
+ Elodie: "Elodie"
+ Golani: "Golani"
+ Velave: "Velave"
+ Haneih: "Haneih"
+ Ordan: "Ordan"
+ Vijya: "Vijya"
+ Segol: "Segol"
+ Hanno: "Hanno"
+ Elimelech: "Elimelech"
+ Andreia: "Andreia"
+ Alene: "Alene"
+ Mendel: "Mendel"
+ Levis: "Levis"
+ Dasra: "Dasra"
+ Eren: "Eren"
+ Eocaid: "Eocaid"
+ Ragohba: "Ragohba"
+ Adem: "Adem"
+ Siel: "Siel"
+ Sattar: "Sattar"
+ Delmatius: "Delmatius"
+ Vinay: "Vinay"
+ Gundomar: "Gundomar"
+ Ilios: "Ilios"
+ Kanada: "Kanada"
+ Eamon: "Eamon"
+ Hange: "Hange"
+ Gianni: "Gianni"
+ Ophelia: "Ophelia"
+ Avichail: "Avichail"
+ Hever: "Hever"
+ HÃ©loÃ¯se: "HÃ©loÃ¯se"
+ Nioclaus: "Nioclaus"
+ Naya: "Naya"
+ Borzou: "Borzou"
+ Theo: "Theo"
+ Chalom: "Chalom"
+ CinÃ¡ed: "CinÃ¡ed"
+ Rodwell: "Rodwell"
+ Artonio: "Artonio"
+ Christer: "Christer"
+ Ã–rjan: "Ã–rjan"
+ Leshem: "Leshem"
+ Shadmehr: "Shadmehr"
+ Ernesto: "Ernesto"
+ Anrique: "Anrique"
+ Mio: "Mio"
+ Auguste: "Auguste"
+ Angelique: "Angelique"
+ Arna: "Arna"
+ Aleix: "Aleix"
+ Yinon: "Yinon"
+ Amiri: "Amiri"
+ Coreall: "Coreall"
+ Agnan: "Agnan"
+ Elihu: "Elihu"
+ Imalek: "Imalek"
+ Faramar: "Faramar"
+ Manchane: "Manchane"
+ Eshbal: "Eshbal"
+ Rishu: "Rishu"
+ Aiden: "Aiden"
+ Morven: "Morven"
+ Jako: "Jako"
+ Lynnea: "Lynnea"
+ Eathin: "Eathin"
+ Kadal: "Kadal"
+ Orni: "Orni"
+ Lillian: "Lillian"
+ Codilach: "Codilach"
+ Mugain: "Mugain"
+ Moriel: "Moriel"
+ Bairre: "Bairre"
+ Roibeard: "Roibeard"
+ Etzion: "Etzion"
+ Hersten: "Hersten"
+ Wendelin: "Wendelin"
+ Vishnal: "Vishnal"
+ Shana: "Shana"
+ Aaren: "Aaren"
