death reasons and tweaks to development growth

--- a/localization/english/fodlan_namelists_l_english.yml
+++ b/localization/english/fodlan_namelists_l_english.yml
@@ -893,7 +893,6 @@
  Gwier: "Gwier"
  Zeke: "Zeke"
  Soheil: "Soheil"
- SimonÃ©: "SimonÃ©"
  Cuach: "Cuach"
  Monier: "Monier"
  Lykas: "Lykas"
@@ -903,7 +902,6 @@
  Joe: "Joe"
  Zakai: "Zakai"
  Rasoul: "Rasoul"
- LÃºcia: "LÃºcia"
  Vanellope: "Vanellope"
  Reiner: "Reiner"
  Guillame: "Guillame"
@@ -937,7 +935,6 @@
  Elinoy: "Elinoy"
  Gascon: "Gascon"
  Caillin: "Caillin"
- PatrÃ­cia: "PatrÃ­cia"
  Mevorach: "Mevorach"
  Grisha: "Grisha"
  Bertolt: "Bertolt"
@@ -948,7 +945,6 @@
  Nahar: "Nahar"
  Caecina: "Caecina"
  Bert: "Bert"
- OctÃ¡vio: "OctÃ¡vio"
  Keith: "Keith"
  Meldrick: "Meldrick"
  Gachet: "Gachet"
@@ -968,13 +964,11 @@
  Hamlet: "Hamlet"
  Aearn: "Aearn"
  Mike: "Mike"
- SÃ¡lado: "SÃ¡lado"
  Mikulas: "Mikulas"
  Hildebrandt: "Hildebrandt"
  Castelleta: "Castelleta"
  Mahava: "Mahava"
  Benlee: "Benlee"
- LÃ­dia: "LÃ­dia"
  Draigen: "Draigen"
  Acarya: "Acarya"
  Fiac: "Fiac"
@@ -983,7 +977,6 @@
  Aaliya: "Aaliya"
  Lydie: "Lydie"
  Kit: "Kit"
- AgustÃ­n: "AgustÃ­n"
  Nahresi: "Nahresi"
  Nichlas: "Nichlas"
  Dairen: "Dairen"
@@ -1045,13 +1038,11 @@
  Ophelia: "Ophelia"
  Avichail: "Avichail"
  Hever: "Hever"
- HÃ©loÃ¯se: "HÃ©loÃ¯se"
  Nioclaus: "Nioclaus"
  Naya: "Naya"
  Borzou: "Borzou"
  Theo: "Theo"
- Chalom: "Chalom"
- CinÃ¡ed: "CinÃ¡ed"
+ Chalom: "Chalom
  Rodwell: "Rodwell"
  Artonio: "Artonio"
  Christer: "Christer"
