--- a/localization/english/fodlan_namelists_l_english.yml
+++ b/localization/english/fodlan_namelists_l_english.yml
@@ -1042,11 +1042,10 @@
  Naya: "Naya"
  Borzou: "Borzou"
  Theo: "Theo"
- Chalom: "Chalom
+ Chalom: "Chalom"
  Rodwell: "Rodwell"
  Artonio: "Artonio"
  Christer: "Christer"
- Ã–rjan: "Ã–rjan"
  Leshem: "Leshem"
  Shadmehr: "Shadmehr"
  Ernesto: "Ernesto"
