--- a/localization/english/fodlan_culture_l_english.yml
+++ b/localization/english/fodlan_culture_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
  #culture groups
- fodlan_group:0 "Fodlan Group"
- brigid_group:0 "Brigid Group"
- kotesh_group:0 "Kotesh Group"
- laguz_group:0 "Laguz Group"
- mihran_group:0 "Mihran Group"
- morfis_group:0 "Morfis Group"
- northern_group:0 "Northern Group"
- reqqon_group:0 "Reqqon Group"
- slither_group:0 "Slither Group"
+ fodlan_group:0 "Fodlanese"
+ brigid_group:0 "Brigitine"
+ kotesh_group:0 "Koteshi"
+ laguz_group:0 "Laguz"
+ mihran_group:0 "Mihrana"
+ morfis_group:0 "Morfist"
+ northern_group:0 "Northern"
+ reqqon_group:0 "Reqqonese"
+ slither_group:0 "Slither"
  
  #culture
  high_fodlan:0 "High Fodlan"
